laboratorios/laboratorio5/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vcc-python-helloworld
  name: vcc-python-helloworld
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vcc-python-helloworld
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: vcc-python-helloworld
    spec:
      containers:
      - image: 620241740192.dkr.ecr.eu-west-2.amazonaws.com/vcc-laboratorio5:latest
        imagePullPolicy: Always
        name: vcc-python-helloworld
        ports:
        - containerPort: 5000
