laboratorios/laboratorio5/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: vcc-python-helloworld
  name: vcc-python-helloworld
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: vcc-python-helloworld
  type: NodePort
status:
  loadBalancer: {}
